# text-summarizer-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py
src/dtos/responses/: summarizer_response.py
src/services/: summarizer_service.py
summarizer-api/: .gitignore  Dockerfile  pyproject.toml
summarizer-api/src/dtos/requests/: summarizer_request.py
summarizer-api/src/services/: summarizer_service.py
