[tool.poetry]
name = "text-summarizer"
version = "0.1.0"
description = ""
authors = ["Ömer Asaf Karasu <omerasafkarasu06@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
spacy = ">=3.8.7,<4.0.0"
fastapi = {extras = ["standard"], version = ">=0.115.12,<0.116.0"}
pydantic = ">=2.11.5,<3.0.0"
slowapi = "^0.1.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
